--- a/ms-pedidos/.gitignore
+++ b/ms-pedidos/.gitignore
@@ -4,6 +4,12 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+*.class
+*.log
+/target/
+/node_modules/
+.env
+
 ### STS ###
 .apt_generated
 .classpath
